re PR tree-optimization/42703 (ICE in generate_subtree_copies with out of bounds array access)

2010-01-13  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/42703
	* tree-sra.c (analyze_access_subtree): Check that we can build a
	reference to the original data within the aggregate.

	* testsuite/gcc.c-torture/compile/pr42703.c: New test.

From-SVN: r155863